Fixed Form Overflow and Updated Paddings

--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,8 @@ justify-content: center;}
 
 .blog-column{float:left;
 width: 31%;
-background-color: whitesmoke;}
+background-color: whitesmoke;
+}
 
 .blog-img{width: 100%;
 height: 18rem;
@@ -256,9 +257,10 @@ margin-bottom: 1.75%;
 width:100%;
 font-size: medium;}
 
-.form-comments{padding: 0.75rem;
+.form-comments{padding: 1.75%;
 color: rgb(93, 93, 97);
 height: 75%;
+min-height: 150px;
 width: 100%;
 margin-bottom: 1.75%;
 font-size: medium;}
@@ -339,7 +341,7 @@ color: whitesmoke;
 
     .image-grid {
     grid-template-columns:  repeat(2, 44%);
-    grid-template-rows: repeat(6, 200px);
+    grid-template-rows: repeat(6, 15%);
     }
 
     .grid-text{
@@ -365,7 +367,7 @@ color: whitesmoke;
     }
 
     .blog{
-        padding-bottom: 1rem;
+        padding-bottom: 3%;
         text-align: center;
     }
 
@@ -373,6 +375,7 @@ color: whitesmoke;
         width: 100%;
         max-width: 750px;
         float: none;
+        padding-bottom: 5%;
     } 
 
     .contact{
@@ -381,22 +384,18 @@ color: whitesmoke;
 
     .contact-info{
         width: 100%;
-        padding-left: 10%;
-        padding-right: 10%;
+        padding-left: 5%;
+        padding-right: 5%;
     }
 
     .comments{
         width: 100%;
-        padding-top: 2rem;
+        padding-top: 5%;
+        display: block;
     }
 
     .form-name{
         width: 100%;
-    }
-
-    .form-email::before{
-        content:"\a\a";
-        white-space: pre;
     }
 
     .form-email{
@@ -404,8 +403,8 @@ color: whitesmoke;
     }
 
     footer{
-        padding-top: 5rem;
-        padding-bottom: 5rem;
+        padding-top: 8%;
+        padding-bottom: 8%;
         padding-left: 0;
     }
 
@@ -496,6 +495,7 @@ color: whitesmoke;
     .blog-column{
         width: 100%;
         float: none;
+        padding-bottom: 5%;
     }  
     
     .contact{
@@ -512,15 +512,11 @@ color: whitesmoke;
     .comments{
         width: 100%;
         padding-top: 2rem;
+        display: block;
     }
 
     .form-name{
         width: 100%;
-    }
-
-    .form-name:after {
-        content:"\a";
-        white-space: pre;
     }
 
     .form-email{
